======= Release Highlights ================================================
===========================================================================
- 05/03/2024
01. svctool: mount /etc/indimail/resolv.conf when UNSHARE is set
- 11/03/2024
02. installer.c: fixed displaying size variable, fixed allocation of zerobuf
    variable
- 29/04/2024
03. trynpbg1.c, tryspnam.c: Fix compiler warnings

* Sun Mar 03 2024 12:20:15 +0000 Manvendra Bhangui <indimail-mta@indimail.org> 3.0.7-1.1%{?dist}
Release 3.0.7-1.1 Start 02/01/2024 End 03/02/2024
======= Release Highlights ================================================
- Performance improvement by replacing select() with poll() in
  timeoutread(), timeoutwrite() in libqmail
- Performance improvment by increasing qmail-queue buffer
- New include file buffer_defs.h for buffer size constants
- replaced dk-filter with qmail-dkim for use in filterargs control file
===========================================================================
- 02/01/2024
01. svctool: fix symbolic links clientcert.pem, scan.conf
02. Makefile: fix compilation error for forward, filterit
03. create_services: renamed cronlist.q, cronlist.i to indimail-mta.cron,
    indimail.cron
- 05/01/2024
04. getDomainToken.c: return correct domain when local or remote delivery is
    not set
- 06/01/2024
05. svctool.in, qlocal_upgrade.in: add supplementary group qcerts for qmails
    user
06. qmail-dkim.c: use new error code DKIM_BAD_IDENTITY for invalid identity
    domain (i= tag)
- 07/01/2024
07. qmail-spamfilter.c: bypass antispam filter when RELAYCLIENT and
    RELAYCLIENT_NOSPAMFILTER is set
08. svctool: updated bogofilter.cf header_format, log_update_format
- 09/01/2024
09. svctool: replace dk-filter with qmail-dkim when creating filterargs
10. qlocal_upgrade.in: repace dk-filter with qmail-dkim in filterargs control
    file
11. spawn-filter.c: display filter used for mail rejected message
12. qmail-dkim.c: added DKIM_BAD_IDENTITY with letter Y