@@ -472,7 +472,6 @@ varargs.h
 indimail-services.7
 favicon.base64
 filterit.1
-tests/spfquery.txt
 backup.conf
 rd-remote
 printass
